Major User visible changes in Buildbot.             -*- outline -*-
   see the git log for a detailed list of changes:
   http://github.com/buildbot/buildbot/commits/master


* Next Version

** New and improved Source steps

Source steps have been rewritten to have a simpler, more consistent
configuration, and to run on the master instead of the slave, allowing much
more control over their behavior.  So far, Mercurial is complete.

** Interested users for Try

Try jobs can now include the name of an interested user, which will be kept
with the patch and displayed in the web status.

** 'buildbot checkconfig' improved

This command no longer copies the configuration to a temporary directory.  This
change allows more complex configurations to be tested with checkconfig.

* Buildbot 0.8.4 (June 12, 2011)

** Monotone support

Monotone support has returned to Buildbot, thanks to Richard Levitte.

** `Blocker` step

A "beta" version of the Blocker step has been added; this step allows multiple
concurrent builds to be synchronized.  It is "beta" in the sense that it may
contain significant bugs, is only documented in the source code, and has an
interface that is subject to non-compatible change in later versions of
Buildbot.  See `contrib/blockertest` for a test and demonstration of the new
step's functionality.

** Deprecations, Removals, and Non-Compatible Changes

*** Init script now uses /etc/default/buildmaster for instance configuration.
Also MASTER_ENABLED used in /etc/default/buildmaster now accepts 'true|yes|1'
to enable instance and 'false|no|0' to disable(not case sensitive). Other
values will be considered as syntax error.

*** 'buildbot.status.words.IRC' now defaults to `AllowForce=False` to prevent
IRC bots from being allowed to force builds by default.

*** MasterShellCommand and all of the transfer steps now default to
haltOnFailure=True and flunkOnFailure=True

*** GitPoller's 'workdir' parameter should always be supplied; using the